schema/testdata/validation_unique_input_non_unique_relationship/schema.keel
model Publisher {
}

model Author {
    fields {
        publisher Publisher
    }
}

model Book {
    fields {
        author Author @unique
    }

    operations {
        get getByPublisher(author.publisher.id)
    }
}
